--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8" />
-		<title>MingGeJs1.9.6.5.2016超级正式版,国产山寨JQUERY，请支持国产，官网www.shearphoto.com</title>
+		<title>MingGeJs1.9.6.5.2016 v2超级正式版,国产山寨JQUERY，请支持国产，官网www.shearphoto.com</title>
 		<style type="text/css">
 			#some_element,
 			#some_element2 {
@@ -100,7 +100,7 @@
 				});
 				$("input").eq(3).click(function() {
 					//AJAX读取远程文件
-					$.ajax({ //    $.ajax,$.post,$().load,$.get() $.getJSON的接口也齐全了
+				var xrh=	$.ajax({ //    $.ajax,$.post,$().load,$.get() $.getJSON的接口也齐全了
 						url: "MingGeJs介绍.txt",
 						data: {
 							a: 1,
